fixed bug : the navbar no longer shifts when scrolling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@
 
 body {
   margin: 0!important;
+  overflow-y: scroll;
 }
 
 hr {
